syntax = "proto3";

option go_package = "./user-service";
service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc GetUser (GetUserRequest) returns (User) {}
    rpc UpdateUser (UpdateUserRequest) returns (User) {}
    rpc DeleteUser (DeleteUserRequest) returns (User) {}
}

service AuthenticationService {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

// User Service
message GetUserRequest {
    string id = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string email = 2;
}

message User {
    string email = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 1;
}

// Authentication Service
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    bool isValid = 1;
}

